2006-05-14 Bernhard Held <bernhard AT bernhardheld.de>

	* support/packihx/configure.in,
	* support/packihx/configure: removed warning, autoconf >= 2.5x can
	determine sizeof basic types even while cross compiling

2006-05-13 Bernhard Held <bernhard AT bernhardheld.de>

	* src/avr/gen.c (aopop),
	* src/ds390/gen.c (aopOp),
	* src/hc08/gen.c (aopOp),
	* src/mcs51/gen.c (aopop),
	* src/pic16/gen.c (pic16_aopOp),
	* src/pic/gen.c (aopOp),
	* src/z80/gen.c (aopop): fix for bug #1479882; use new, exclusive asmop
	if size of operand is smaller than spill location

2006-05-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented numeric ranges, WEBDOC #1442369
	* device/include/ds80c390.h: added sfr16 definitions
	* src/ds390/gen.c,
	* src/ds390/gen.h,
	* src/ds390/main.c,
	* src/ds390/ralloc.c,
	* src/ds390/ralloc.h: changes all over the place to sync with mcs51
	  fixing several bugs and adding sfr16/sfr32, reentrant bit params,
	  bit returning functions
	* support/regression/tests/sfr16.c: enabled test on ds390

2006-05-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (asmopToBool, genIfx): fix for bug #1429722
	* src/hc08/gen.c (storeRegToAop): fix for bug #1439894

2006-05-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* sim/ucsim/sim.src/memcl.h: added get_decoder() to cl_address_space
	* sim/ucsim/sim.src/mem.cc: implemented cl_address_space::get_decoder,
	  (cl_address_space constructor): removed expensive initialization,
	  (cl_address_space::get_cell): extended for late initialization,
	  (cl_address_space::*): use late initialization,
	  (cl_address_decoder::activate): removed expensive initialization,
	  This reduced regression test running time by 25%

2006-05-11 Bernhard Held <bernhard AT bernhardheld.de>

	* packihx/,
	* configure.in,
	* configure,
	* sdcc.dsw,
	* Makefile.bcc,
	* Makefile.in,
	* support/packihx/Makefile.in,
	* support/packihx/clean.mk,
	* support/packihx/Makefile.bcc,