@@ -1,0 +1,8 @@
+top_builddir = ../../
+top_srcdir   = ../..
+srcdir       = .
+
+
+SUBDIRS = 
+
+include $(top_srcdir)/Makefile.subdir
